[BlackBerry] Don't release the canvas Drawable, flush it directly instead. https://bugs.webkit.org/show_bug.cgi?id=119589 https://jira.bbqnx.net/browse/BRWSR-12531 JIRA 444857

Patch by Jakob Petsovits <jpetsovits@blackberry.com> on 2013-08-09
Reviewed by George Staikos.

The previous code here used releaseBufferDrawable() to
flush painted ImageBuffer contents, but then proceeded
to use that released Drawable for further painting
without ever locking a new one.

In an implementation that actually releases the Drawable
rather than keeping it around and just flushing it,
this will wreak havoc as bad as black screens or crashes.

As a solution that doesn't require the ImageBuffer object
to swap out its m_canvas member for a new Drawable, we can
access the PlatformGraphicsContext::flush() method directly
to achieve the same effect as was previously intended by
calling releaseBufferDrawable(). All it needs is letting
the canvas layer know about the Drawable so it can call
that flush() method by itself.

No new tests, verified by not crashing with an aforementioned
implementation of releaseBufferDrawable().

* platform/graphics/blackberry/CanvasLayerWebKitThread.cpp:
(WebCore::CanvasLayerCompositingThreadClient::CanvasLayerCompositingThreadClient):
(WebCore::CanvasLayerCompositingThreadClient::commitPendingTextureUploads):
(WebCore::CanvasLayerWebKitThread::CanvasLayerWebKitThread):
* platform/graphics/blackberry/CanvasLayerWebKitThread.h:
(WebCore::CanvasLayerWebKitThread::create):
* platform/graphics/blackberry/ImageBufferBlackBerry.cpp:
(WebCore::ImageBuffer::ImageBuffer):
(WebCore::ImageBuffer::~ImageBuffer):

Canonical link: https://commits.webkit.org/137591@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153895 268f45cc-cd09-0410-ab3c-d52691b4dbfc